# Diplom_backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  query_test_module.py
.docker/: docker-compose.ci-test.yml  docker-compose.prod.yml  docker-compose.yml
.docker/test/: Dockerfile
.docker/unified/: Dockerfile
src/: exceptions.py  loaded_env.py  main.py
src/api/: __init__.py  dependencies.py  templater.py
src/authorize/: authorizeModule.py
src/db/: db.py  querytable.py
src/models/: __init__.py
src/models/access_control/: user.py  user_data.py  user_status.py
src/models/enquiry_temp/: input_field.py
src/models/fact_tables/: organization.py
src/models/page_configuration/: page.py  query.py
src/models/system_configuration/: associations.py  db.py  enquiry.py  enquiry_template.py  enquiry_template_block.py
src/repositories/: db.py  enquiry.py  input_field.py  page.py  query.py  user.py
src/schemas/: component.py  component_template.py  db.py  page.py  query.py  templater.py
src/services/: base_templater.py  templaterDocx.py  templaterPdf.py  templaterXlsx.py
src/templates/: template0.docx  template0.xlsx
src/utils/: logger.py  repository.py  unitofwork.py  utils.py
tests/: conftest.py  model_factories.py
tests/api/: test_api.py
tests/services/: _docx_templater.py  test_docx_templater.py
