[project]
name = "enquiry-automation-service"
version = "0.1.0"
description = "Сервис для автоматической генерации справок"
authors = [
    {name = "android113",email = "dron66101@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.10.0)",
    "asyncpg (==0.30.0)",
    "beartype (==0.21.0)",
    "click (==8.2.1)",
    "clr (==1.0.3)",
    "colorama (==0.4.6)",
    "et-xmlfile (==2.0.0)",
    "fastapi (==0.116.1)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "idna (==3.10)",
    "mdurl (==0.1.2)",
    "more-itertools (==10.7.0)",
    "openpyxl (==3.1.5)",
    "packaging (==25.0)",
    "pillow (==11.3.0)",
    "plum-dispatch (==1.7.4)",
    "pydantic (==2.11.7)",
    "pydantic-settings (==2.10.1)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.2)",
    "python-dotenv (==1.1.1)",
    "rich (==14.1.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "spire-doc (==13.6.4)",
    "sqlalchemy (==2.0.42)",
    "starlette (==0.47.2)",
    "transliterate (==1.10.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.1)",
    "uvicorn (==0.35.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]

packages = [{include = "src"}]
[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
pytest-mock = "^3.15.0"
pytest-loguru = "^0.4.0"
mypy = "^1.18.2"


[tool.poetry.group.render.dependencies]

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
explicit_package_bases = true
mypy_path = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # Ошибки стиля (PEP8)
    "W",  # Предупреждения стиля (PEP8)
    "F",  # Логические ошибки (Pyflakes)
    "I",  # Сортировка импортов (isort)
    "D",  # Правила для докстрингов (pydocstyle)
    "N",  # pep8-naming(CamelCase для переменных, snake_case для классов),
    "D",  # All docstrings
]
ignore = ["D100", "D104", "D107"]
fixable = ["ALL"]
unfixable = [
    "F841",  # Неиспользуемая локальная переменная
    "F401",  # Неиспользуемый импорт
]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]